add angular material tabs in register-or-login module

--- a/src/app/register-or-login/register-or-login.component.html
+++ b/src/app/register-or-login/register-or-login.component.html
@@ -1,1 +1,4 @@
-<p>register-or-login works!</p>
+<mat-tab-group>
+  <mat-tab label="Register"> Content 1 </mat-tab>
+  <mat-tab label="Log in"> Content 2 </mat-tab>
+</mat-tab-group>
