--- a/src/app/register-or-login/register-or-login.component.html
+++ b/src/app/register-or-login/register-or-login.component.html
@@ -1,4 +1,8 @@
 <mat-tab-group>
-  <mat-tab label="Register"> Content 1 </mat-tab>
-  <mat-tab label="Log in"> Content 2 </mat-tab>
+  <mat-tab label="Register">
+      <pm-register></pm-register>
+  </mat-tab>
+  <mat-tab label="Log in">
+      <pm-login></pm-login>
+  </mat-tab>
 </mat-tab-group>
