--- a/src/app/register-or-login/register/register.component.html
+++ b/src/app/register-or-login/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<form formGroupName="registrationForm">
+    <label>
+      Full Name:
+      <input type="text" formControlName="fullName">
+    </label>
+  
+    <label>
+      Email:
+      <input type="email" formControlName="email">
+    </label>
+    
+    <label>
+      Password:
+      <input type="password" formControlName="password">
+    </label>
+
+    <button type="submit">Register</button>
+</form>
