--- a/src/app/register-or-login/login/login.component.html
+++ b/src/app/register-or-login/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<form formGroupName="logInForm">  
+    <label>
+      Email:
+      <input type="email" formControlName="email">
+    </label>
+    
+    <label>
+      Password:
+      <input type="password" formControlName="password">
+    </label>
+
+    <button type="submit">Log In</button>
+</form>
