--- a/src/app/register-or-login/login/login.component.html
+++ b/src/app/register-or-login/login/login.component.html
@@ -1,13 +1,17 @@
-<form formGroupName="logInForm">  
-    <label>
-      Email:
-      <input type="email" formControlName="email">
-    </label>
-    
-    <label>
-      Password:
-      <input type="password" formControlName="password">
-    </label>
+<form formGroupName="logInForm">
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email" />
+    </mat-form-field>
+  </div>
 
-    <button type="submit">Log In</button>
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" />
+    </mat-form-field>
+  </div>
+
+  <button mat-flat-button color="primary" type="submit">Log In</button>
 </form>
