--- a/src/app/register-or-login/register/register.component.html
+++ b/src/app/register-or-login/register/register.component.html
@@ -1,18 +1,24 @@
 <form formGroupName="registrationForm">
-    <label>
-      Full Name:
-      <input type="text" formControlName="fullName">
-    </label>
-  
-    <label>
-      Email:
-      <input type="email" formControlName="email">
-    </label>
-    
-    <label>
-      Password:
-      <input type="password" formControlName="password">
-    </label>
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>Full Name</mat-label>
+      <input matInput type="text" formControlName="fullName" />
+    </mat-form-field>
+  </div>
 
-    <button type="submit">Register</button>
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email" />
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" />
+    </mat-form-field>
+  </div>
+
+  <button mat-flat-button color="primary" type="submit">Register</button>
 </form>
