make form inputs full width

--- a/src/app/register-or-login/login/login.component.html
+++ b/src/app/register-or-login/login/login.component.html
@@ -13,5 +13,5 @@
     </mat-form-field>
   </div>
 
-  <button mat-flat-button color="primary" type="submit">Log In</button>
+  <button mat-flat-button id="login-btn" color="primary" type="submit">Log In</button>
 </form>
