--- a/src/app/register-or-login/register/register.component.html
+++ b/src/app/register-or-login/register/register.component.html
@@ -20,5 +20,5 @@
     </mat-form-field>
   </div>
 
-  <button mat-flat-button color="primary" type="submit">Register</button>
+  <button mat-flat-button id="register-btn" color="primary" type="submit">Register</button>
 </form>
